--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h2 id="help-topics" class="visually-hidden">Help Topics</h2>
         <div class="grid">
           <article class="card">
-            <img src="Image\icon-versions.png" alt="" aria-hidden="true">
+            <img src="icon-versions.png" alt="" aria-hidden="true">
             <div>
               <h3>Using Abstract</h3>
               <p>Abstract lets you manage, version, and document your designs in one place.</p>
@@ -53,7 +53,7 @@
             </div>
           </article>
           <article class="card">
-            <img src="Image\icon-account.png" alt="" aria-hidden="true">
+            <img src="icon-account.png" alt="" aria-hidden="true">
             <div>
               <h3>Manage your account</h3>
               <p>Configure your account settings, such as your email, profile details, and password.</p>
@@ -61,7 +61,7 @@
             </div>
           </article>
           <article class="card">
-            <img src="Image\icon-organizations.png" alt="" aria-hidden="true">
+            <img src="icon-organizations.png" alt="" aria-hidden="true">
             <div>
               <h3>Manage organizations, teams, and projects</h3>
               <p>Use Abstract organizations, teams, and projects to organize your people and your work.</p>
@@ -69,7 +69,7 @@
             </div>
           </article>
           <article class="card">
-            <img src="Image\icon-authenticate.png" alt="" aria-hidden="true">
+            <img src="icon-authenticate.png" alt="" aria-hidden="true">
             <div>
               <h3>Authenticate to Abstract</h3>
               <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
@@ -77,7 +77,7 @@
             </div>
           </article>
           <article class="card">
-            <img src="Image\icon-billing.png" alt="" aria-hidden="true">
+            <img src="icon-billing.png" alt="" aria-hidden="true">
             <div>
               <h3>Manage billing</h3>
               <p>Change subscriptions and payment details.</p>
@@ -85,7 +85,7 @@
             </div>
           </article>
           <article class="card">
-            <img src="Image\icon-comment.png" alt="" aria-hidden="true">
+            <img src="icon-comment.png" alt="" aria-hidden="true">
             <div>
               <h3>Abstract support</h3>
               <p>Get in touch with a human.</p>
@@ -151,3 +151,4 @@
   </footer>
 </body>
 </html>
+
